--- a/tech.css
+++ b/tech.css
@@ -25,3 +25,11 @@ html {
     -o-background-size: cover;
     -moz-white-space: pre-line;
 }
+
+div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #000;
+    color: #fff;
+}
